# cmake_config_sample

./: .gitignore  CMakeLists.txt  LICENSE.txt  config.h.in  main.c  stpcpy.c  stpcpy.h
